--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ a {
     text-decoration: none;
     color: black;
     font-family: sans-serif;
-    margin: auto;
+    margin-bottom: 30px;
 }
 
 .headers {
