--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ ul {
     margin-right: 100px;
 }
 
+/* Making sure that the links are formatted just like the rest of the text. */
+
 a {
     text-decoration: none;
     color: black;
